Changelog

New

* dataQuality module - list_dataQuality. currently includes list_allergy

  Data quality assessment. Are allergies recorded for the listed patients?

* paste2 - a version of paste which ignores NA, empty strings and character(0)

* addition of db$reactions
  addition of KnownAllergies to db$clinical

0.7.2 - 28th September 2019
===========================

Bugfixes

* add "Invoice" to appointment_status_types

* fix error if empty $contact_type when in $list_contact_count

0.7.1 - 27th September 2019
===========================

Bugfix

* process ReportDate to as.Date() in observeValues at table level
  failure to convert to as.Date will result in invalid dates being compared

  other date fields in other tables also converted to as.Date() at table level

0.7.0 - 21st September 2019
===========================

Breaking changes

* Moved framingham_riskequation to package framinghamRiskEquation
  at https://github.com/DavidPatShuiFong/framinghamRiskEquation

* Moved billings methods to separate package (module)
  at https://github.com/DavidPatShuiFong/dMeasureBillings

* Moved chronic disease management methods (CDM) to separate package (module)
  at https://github.com/DavidPatShuiFong/dMeasureCDM

0.6.0 - 18th September 2019
===========================

New

* Addition of appointment versions of list_qim
  e.g. list_qim_cvdRisk_appointments

Breaking changes

* Move Quality Improvement Measures to separate package (module)
  'dMeasureQIM'

Improvement

* Framingham risk equation function

  Default is now cardiovascular (instead of coronary heart disease) risk

Bugfix

* GPMP R/V in CDM had reversed colours (yellow/green)
  and actions ('Overdue'). Fixed

0.5.0 - 9th September 2019
===========================

Added vignette

* Change billings_list method to list_billings
* Integrates appointments, visits and billing contacts into single view
* Add 'own_billings' active field, if FALSE, then all of the patient's